<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    tools:context="com.example.dalalalmutawa.quizapp.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="238dp"
            android:scaleType="fitStart"
            android:src="@drawable/work" />

        <EditText
            android:id="@+id/nameEditText"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/name"
            android:textColorHighlight="@color/colorPrimary" />

        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q1" />

        <RadioGroup
            android:id="@+id/RadioGroupQ1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/FiveRadioButton"
                style="@style/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Five" />

            <RadioButton
                android:id="@+id/SixRadioButton"
                style="@style/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Six" />

            <RadioButton
                android:id="@+id/SevenRadioButton"
                style="@style/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Seven" />

        </RadioGroup>
        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2" />

        <CheckBox
            android:id="@+id/ThreeWomen"
            style="@style/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ThreeWomen"/>

        <CheckBox
            android:id="@+id/FourWomen"
            style="@style/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FourWomen"/>

        <CheckBox
            android:id="@+id/TwoMen"
            style="@style/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TwoMen"/>


        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TheyDo" />

        <RadioGroup
            android:id="@+id/RadioGroupQ2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Playing"
                style="@style/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Playing" />

            <RadioButton
                android:id="@+id/Working"
                style="@style/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Working" />

        </RadioGroup>
        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4" />

        <RadioGroup
            android:id="@+id/RadioGroupQ4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Yes"
                style="@style/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Yes" />

            <RadioButton
                android:id="@+id/No"
                style="@style/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/No" />

        </RadioGroup>
        <EditText
            android:id="@+id/Q5"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/Q5"
            android:textColorHighlight="@color/colorPrimary" />
        <Button
            style="@style/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="SubmitOnClick"
            android:text="@string/Submit" />


    </LinearLayout>

</ScrollView>
